--- a/scss/_pages.scss
+++ b/scss/_pages.scss
@@ -1,10 +1,3 @@
-@import "../utils/variables.scss";
-@import "../utils/colors.scss";
-@import "../utils/mixins.scss";
-
-
-
-
 header {
     i {
         font-size: 2rem;
@@ -47,6 +40,7 @@ body {
     padding: 2 rem 1rem;
     position: relative;
     border-radius: 2rem 2rem 0 0;
+    @include heart;
 }
 .resto-main {
     padding: 0 1rem;  
@@ -71,7 +65,7 @@ overflow: hidden;
     border-radius: 1rem;
   margin: 0.5rem;
   background-color: white;
-    @include mixins.box-shadow;
+    @include box-shadow-primary;
 
       .menu-item__prix {
 margin-left: auto;
@@ -116,7 +110,7 @@ align-items: flex-end;
           margin-right: 0;
       }
       i {
-          @include animation.quarterspin;
+          @include quarterspin;
          animation: quarterspin 0.5s ease-in-out; 
       }
     }
