--- a/scss/layout/_menus.scss
+++ b/scss/layout/_menus.scss
@@ -1,5 +1,3 @@
-@import "../utils/variables.scss";
-@import "../utils/colors.scss";
 #homepage {
 
 
@@ -72,6 +70,7 @@
           
         h3, p {
             padding: 0.3rem;
+            width: 80%;
         }
 
     }
