--- a/scss/style.css
+++ b/scss/style.css
@@ -31,6 +31,22 @@ a {
   color: inherit;
 }
 
+@-webkit-keyframes quarter-spin {
+  0% {
+    transform: rotate -270deg;
+  }
+  100% {
+    transform: rotate(0);
+  }
+}
+@keyframes quarter-spin {
+  0% {
+    transform: rotate -270deg;
+  }
+  100% {
+    transform: rotate(0);
+  }
+}
 header {
   font-family: "Shrikhand", cursive;
   text-align: center;
@@ -227,6 +243,7 @@ header {
 }
 #homepage .menus .card__description h3, #homepage .menus .card__description p {
   padding: 0.3rem;
+  width: 80%;
 }
 
 footer {
@@ -286,6 +303,24 @@ body {
   padding: 2 rem 1rem;
   position: relative;
   border-radius: 2rem 2rem 0 0;
+  display: inline-block;
+  font-style: normal;
+  font-variant: normal;
+  text-rendering: auto;
+  -webkit-font-smoothing: antialiased;
+  font-family: "Font Awesome 5 free";
+  font-weight: 400;
+  content: "";
+  font-size: 2rem;
+  position: absolute;
+  right: 1rem;
+  top: 50%;
+  transform: translateY(-50%);
+  color: inherit;
+  background-clip: text;
+  -webkit-background-clip: text;
+  opacity: 1;
+  transition: all 200ms ease-in-out;
 }
 #page-resto .resto__title .resto-main {
   padding: 0 1rem;
@@ -301,12 +336,15 @@ body {
   }
 }
 #page-resto .resto__title .menu .menu__category {
-  background-color: white;
-  border-radius: 1rem;
+  overflow: hidden;
 }
 #page-resto .resto__title .menu .menu__category .menu-item {
   display: flex;
   overflow: hidden;
+  border-radius: 1rem;
+  margin: 0.5rem;
+  background-color: white;
+  box-shadow: 0px 3px 3px 1px #c7c6c6;
 }
 #page-resto .resto__title .menu .menu__category .menu-item .menu-item__prix {
   margin-left: auto;
@@ -317,10 +355,17 @@ body {
 }
 #page-resto .resto__title .menu .menu__category .menu-item .menu-item__description {
   padding: 1rem;
+  overflow: hidden;
+}
+#page-resto .resto__title .menu .menu__category .menu-item .menu-item__description h4, #page-resto .resto__title .menu .menu__category .menu-item .menu-item__description p {
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 #page-resto .resto__title .menu .menu__category .menu-item .menu-item__check {
   display: grid;
   place-items: center;
+  flex-shrink: 0;
   border-radius: 0 1rem 1rem 0;
   background-color: #99e2d0;
   margin-right: -4rem;
@@ -334,7 +379,29 @@ body {
   aspect-ratio: 1;
   width: 2rem;
   border-radius: 1rem;
+  color: #99e2d0;
 }
-#page-resto .resto__title .menu .menu__category .menu-item:hover #page-resto .resto__title .menu .menu__category .menu-item.menu-item__check {
+#page-resto .resto__title .menu .menu__category .menu-item:hover .menu-item__check {
   margin-right: 0;
-}/*# sourceMappingURL=style.css.map */
+}
+#page-resto .resto__title .menu .menu__category .menu-item:hover i {
+  -webkit-animation: quarterspin 0.5s ease-in-out;
+          animation: quarterspin 0.5s ease-in-out;
+}
+@-webkit-keyframes quarterspin {
+  0% {
+    transform: rotate -270deg;
+  }
+  100% {
+    transform: rotate(0);
+  }
+}
+@keyframes quarterspin {
+  0% {
+    transform: rotate -270deg;
+  }
+  100% {
+    transform: rotate(0);
+  }
+}
+/*# sourceMappingURL=style.css.map *//*# sourceMappingURL=style.css.map */
