--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,11 +1,12 @@
 @import "./base.scss";
+@import "./utils/colors.scss";
+@import "./utils/variables.scss";
+@import "./utils/mixins.scss";
+@import "./utils/animations";
 @import "./layout/header.scss";
 @import "./layout/villes.scss";
 @import "./layout/explorer.scss";
 @import "./layout/choix.scss";
-@import "./utils/colors.scss";
 @import "./layout/menus.scss";
-@import "./utils/variables.scss";
 @import "./layout/footer.scss";
-@import "./pages/pages.scss";
-@import "./utils/mixins.scss";
+@import "./pages.scss";
