--- a/style.css
+++ b/style.css
@@ -1,16 +1,19 @@
-@font-face {
-    font-family: 'roboto';
-    src: url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;700&family=Shrikhand&display=swap");
-}
 
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 header {
-    font-family: shrikhand;
+    font-family: 'Shrikhand';
    text-align: center;
-    width: 100%;
-    height: 3rem;;
+    -width: 20px;
+    -height: 3rem;
     background-color: white;
 }
-
+h1, h2 {
+    font-family: 'Shrikhand';
+}
+.grosTitre {
+  object-fit: scale-down;
+}
 .ville {
     margin-top: 0rem;
 text-align: center;
@@ -54,6 +57,10 @@ text-align: center;
 }
              
 .bigBtn {
+    display:flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
   -webkit-border-radius: 17;
   -moz-border-radius: 17;
   border-radius: 17px;
