--- a/style.css
+++ b/style.css
@@ -2,7 +2,13 @@
     font-family: 'roboto';
     src: url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;700&family=Shrikhand&display=swap");
 }
-
+body {
+    font-family: 'Roboto';
+}
+.titreP {
+    width: 2px;
+    
+}
 header {
     font-family: shrikhand;
    text-align: center;
@@ -13,13 +19,18 @@ header {
 
 .ville {
     margin-top: 0rem;
-text-align: center;
-    width: 100%;
-    height: 3rem;
+    margin-left: -1rem;
+    display: flex;
+    text-align: center;
+    padding-left: 7rem;
+    width: 107%;
+    height: 5rem;
     background-color: lightgray; 
 }
 
 .explorer {
+    width: 107%;
+    margin-left: -1rem;
     margin-top: -1.5rem;
     padding-top: 2rem;
     padding-bottom: 3rem;
@@ -86,4 +97,26 @@ text-align: center;
    text-align: center;
    padding-bottom: 9rem;
   
+}
+.img1,.img3,.img4 {
+    width: 100%;
+    height: auto;
+}
+.img2 {
+    width: 100%;
+   height: 16rem;
+}
+.footer {
+   width: 110%;
+   margin-top: 4rem;
+   margin-bottom: -1rem;
+   padding-bottom: 2em;
+   padding-top: 1rem;
+padding-left: 2rem;
+margin-left: -1rem;
+    background-color: #666666;
+}
+.contact {
+    text-decoration: none;
+    color: #000000;
 }
