--- a/style.css
+++ b/style.css
@@ -5,9 +5,10 @@
 }
 body {
     
-    font-family: "Shrikhand";
+    font-family: "roboto";
    text-align: center;
     background-color: white;
+    margin: 0;
 }
 h1, h2 {
     font-family: "Shrikhand";
@@ -109,7 +110,6 @@ h1, h2 {
    height: 16rem;
 }
 .footer {
-   width: 110%;
    margin-top: 4rem;
    margin-bottom: -1rem;
    padding-bottom: 2em;
