--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 @font-face {
     font-family: "roboto"; 
     src: url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;700&family=Shrikhand&display=swap");
+
 }
 body {
     
@@ -10,7 +11,7 @@ body {
     background-color: white;
     margin: 0;
 }
-h1, h2 {
+h2 {
     font-family: "Shrikhand";
 }
 .grosTitre {
@@ -36,70 +37,69 @@ h1, h2 {
     background-color: rgb(240, 235, 235); 
     text-align: center;
 }
+.fonction {
+    margin-left: -20rem;
+    font-weight: bold;
+}
 .button {
-    -moz-box-shadow: 6px 8px 5px 1px #efdcfb;
-	-webkit-box-shadow: 6px 8px 5px 1px #efdcfb;
-	box-shadow: 6px 8px 5px 1px #efdcfb;
-	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #dfbdfa), color-stop(1, #bc80ea));
-	background:-moz-linear-gradient(top, #dfbdfa 5%, #bc80ea 100%);
-	background:-webkit-linear-gradient(top, #dfbdfa 5%, #bc80ea 100%);
-	background:-o-linear-gradient(top, #dfbdfa 5%, #bc80ea 100%);
-	background:-ms-linear-gradient(top, #dfbdfa 5%, #bc80ea 100%);
-	background:linear-gradient(to bottom, #dfbdfa 5%, #bc80ea 100%);
-	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#dfbdfa', endColorstr='#bc80ea',GradientType=0);
-	background-color:#dfbdfa;
-	-webkit-border-radius:25px;
-	-moz-border-radius:25px;
-	border-radius:25px;
-	display:inline-block;
-	cursor:pointer;
-	color:#ffffff;
-	font-family:Arial;
-	font-size:18px;
-	font-weight:bold;
-	padding:17px 23px;
-	text-decoration:none;
-	text-shadow:0px 1px 5px #9752cc;
-
-}
-             
-.bigBtn {
-    display:flex;
-    flex-direction: row;
-    justify-content: space-around;
     align-items: center;
-  -webkit-border-radius: 17;
-  -moz-border-radius: 17;
-  border-radius: 17px;
-  -webkit-box-shadow: 1px 2px 6px #666666;
-  -moz-box-shadow: 1px 2px 6px #666666;
-  box-shadow: 1px 2px 6px #666666;
-  font-family: Arial;
-  color: #000000;
-  font-size: 12px;
-  background: #f0f0f0;
-  padding: 10px 40px 10px 40px;
-  text-decoration: none;
-  margin-bottom: 2rem;
+    font-weight: bold;
+    font-size: medium;
+    width: 16rem;
+    height: 3.5rem;
+    margin-left: 10rem;
+    display: flex;
+    justify-content: center;
+    margin-bottom: 1rem;
+    padding: 10px 30px;
+    background: #fd7bfd;
+    color: #ffffff;
+    border-radius: 30px;
+    border-color: white;
+    box-shadow: 4px 4px 8px 2px rgba(0,0,0,0.1);
 }
-
-.bigBtn:hover {
-  background: #f0f0f0;
-  background-image: -webkit-linear-gradient(top, #f0f0f0, #f0ccf0);
-  background-image: -moz-linear-gradient(top, #f0f0f0, #f0ccf0);
-  background-image: -ms-linear-gradient(top, #f0f0f0, #f0ccf0);
-  background-image: -o-linear-gradient(top, #f0f0f0, #f0ccf0);
-  background-image: linear-gradient(to bottom, #f0f0f0, #f0ccf0);
-  text-decoration: none;
-}
+.bigBtn {
+    align-items: center;
+    width: 70%;
+    margin: 2.5rem;
+    display: flex;
+    justify-content: space-around;
+    margin-bottom: 2rem;
+    padding: 10px 30px;
+    background: #e0dfde;
+    color: #000000;
+    border-radius: 25px;
+    box-shadow: 4px 4px 8px 2px rgba(0,0,0,0.1);
+    
+    }
+    .bigBtn:hover {
+    background: #e074c9;
+    color: #050505;
+    }          
 
 .choix {
+    margin-top: 3rem;
    background-color: white;
    width: 100%;
    height: 20rem;
    text-align: center;
+   font-weight: bold;
    padding-bottom: 9rem;
   
+}
+li {
+  display: flex;
+  align-items: row;
+  justify-content: center;
+margin-left: -66px;
+        width: 25px;
+        height: 25px;
+        background:rgba(194, 53, 194, 0.842);
+        -webkit-border-radius: 100px;
+        -moz-border-radius: 100px;
+        -o-border-radius: 100px;
+        border-radius: 100px;
+    
 }
 .img1,.img3,.img4 {
     width: 100%;
@@ -110,15 +110,21 @@ h1, h2 {
    height: 16rem;
 }
 .footer {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
    margin-top: 4rem;
    margin-bottom: -1rem;
    padding-bottom: 2em;
    padding-top: 1rem;
 padding-left: 2rem;
 margin-left: -1rem;
-    background-color: #666666;
+    background-color: #363535;
+    color: white;
 }
 .contact {
+  
     text-decoration: none;
-    color: #000000;
+    color: white;
+
 }
