--- a/style.css
+++ b/style.css
@@ -5,11 +5,12 @@
 
 }
 body {
-    
+    display: flex;
+    flex-direction: column;
     font-family: "roboto";
    text-align: center;
     background-color: white;
-    margin: 0;
+    -margin: 0;
 }
 h2 {
     font-family: "Shrikhand";
@@ -23,22 +24,27 @@ h2 {
     height: 4rem;
 }
 .ville {
+    font-size: small;
     display: flex;
     flex-direction: row;
-    text-align: center;
-    justify-content: center;
+   text-align: center;
     align-items: center;
     background-color: lightgray; 
+ gap: 1rem;
 }
 
 .explorer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     padding-top: 2rem;
     padding-bottom: 3rem;
-    background-color: rgb(240, 235, 235); 
+    background-color: #f1f1f0; 
     text-align: center;
 }
 .fonction {
-    margin-left: -20rem;
+    margin-left: -10rem;
     font-weight: bold;
 }
 .button {
@@ -47,18 +53,21 @@ h2 {
     font-size: medium;
     width: 16rem;
     height: 3.5rem;
-    margin-left: 10rem;
+   
     display: flex;
     justify-content: center;
+    margin-top: 3rem;
     margin-bottom: 1rem;
     padding: 10px 30px;
-    background: #fd7bfd;
+    background: #FF79DA ;
     color: #ffffff;
     border-radius: 30px;
     border-color: white;
     box-shadow: 4px 4px 8px 2px rgba(0,0,0,0.1);
 }
 .bigBtn {
+    font-size: small;
+    font-weight: normal;
     align-items: center;
     width: 70%;
     margin: 2.5rem;
@@ -66,14 +75,14 @@ h2 {
     justify-content: space-around;
     margin-bottom: 2rem;
     padding: 10px 30px;
-    background: #e0dfde;
+    background: #f1f1f0;
     color: #000000;
     border-radius: 25px;
     box-shadow: 4px 4px 8px 2px rgba(0,0,0,0.1);
     
     }
     .bigBtn:hover {
-    background: #e074c9;
+    background: #fae7f5;
     color: #050505;
     }          
 
@@ -91,10 +100,12 @@ li {
   display: flex;
   align-items: row;
   justify-content: center;
-margin-left: -66px;
+  align-items: center;
+margin-left: -55px;
         width: 25px;
         height: 25px;
-        background:rgba(194, 53, 194, 0.842);
+        background:#9356DC;
+        color: white;
         -webkit-border-radius: 100px;
         -moz-border-radius: 100px;
         -o-border-radius: 100px;
