--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@ h2 {
    text-align: center;
     align-items: center;
     background-color: lightgray; 
+    justify-content: center;
  gap: 1rem;
 }
 
@@ -112,27 +113,80 @@ margin-left: -55px;
         border-radius: 100px;
     
 }
-.img1,.img3,.img4 {
+.restaurants {
+   padding-top: 15%;
+    background-color: #f1f1f0;
+}
+.card {
+    width: 40%;
+    
+    border-radius: 0px 0px 20px 20px;
+}
+.card:hover {
+    box-shadow: 4px 4px 8px 2px rgba(0,0,0,0.1);
+}
+
+.card > a {
     width: 100%;
-    height: auto;
+    height: 100%;
+    display: block;
+    text-decoration: none;
+  
+
+}
+
+.card__image {
+    width: inherit;
+    height: 60%;
+    
+}
+.card__image > img {
+    width: 100%;
+    height: 100%;
+    border-radius: 20px 20px 0px 0px;
+}
+
+.card__description {
+    /*width: 90%;*/
+    height: 30%;
+    display: flex;
+    flex-direction: column;
+   align-items: flex-start;
+  margin-left: 5%;
+margin-top: -5px;
+margin-bottom: 25px;
+    border-radius: 0 0 20px 20px;
+    line-height: 0%;
+    color: #000000;
+    background-color: white;
+}
+
+/*
+.img1,.img3,.img4 {
+   position: relative;
+   width: 90%;
+    height: auto; 
+    border-radius: 20px 20px 0 0;
 }
 .img2 {
-    width: 100%;
+    width: 90%;
    height: 16rem;
+   border-radius: 20px 20px 0 0;
 }
+
+*/
 .footer {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-   margin-top: 4rem;
    margin-bottom: -1rem;
    padding-bottom: 2em;
    padding-top: 1rem;
 padding-left: 2rem;
-margin-left: -1rem;
     background-color: #363535;
     color: white;
 }
+
 .contact {
   
     text-decoration: none;
