--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
     font-family: "roboto";
    text-align: center;
     background-color: white;
-    -margin: 0;
+    margin: 0;
 }
 h2 {
     font-family: "Shrikhand";
@@ -113,9 +113,14 @@ margin-left: -55px;
         border-radius: 100px;
     
 }
+
 .restaurants {
    padding-top: 15%;
     background-color: #f1f1f0;
+    padding-bottom: 3rem;
+}
+.titreResto {
+    margin-left: -11rem;
 }
 .card {
     width: 40%;
@@ -135,46 +140,39 @@ margin-left: -55px;
 
 }
 
-.card__image {
-    width: inherit;
-    height: 60%;
-    
-}
 .card__image > img {
-    width: 100%;
-    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-left: 1.6rem;
+    width: 20rem;
     border-radius: 20px 20px 0px 0px;
 }
 
 .card__description {
-    /*width: 90%;*/
+   
     height: 30%;
     display: flex;
     flex-direction: column;
    align-items: flex-start;
-  margin-left: 5%;
+   width: 20rem;
+   margin-left: 1.6rem;
 margin-top: -5px;
-margin-bottom: 25px;
+margin-bottom: 3rem;
     border-radius: 0 0 20px 20px;
     line-height: 0%;
     color: #000000;
     background-color: white;
 }
 
-/*
-.img1,.img3,.img4 {
-   position: relative;
-   width: 90%;
-    height: auto; 
-    border-radius: 20px 20px 0 0;
-}
+
 .img2 {
     width: 90%;
    height: 16rem;
    border-radius: 20px 20px 0 0;
 }
 
-*/
+
 .footer {
     display: flex;
     flex-direction: column;
