--- a/style.css
+++ b/style.css
@@ -120,6 +120,10 @@ margin-left: -55px;
     width: 100%;
    height: 16rem;
 }
+.titreFooter {
+    color: white;
+font-family: 'shrikhand';
+}
 .footer {
     display: flex;
     flex-direction: column;
