--- a/style.css
+++ b/style.css
@@ -23,16 +23,20 @@ h2 {
 }
 .header {
     height: 4rem;
+  
+   
 }
-.ville {
+.ville { 
     font-size: small;
     display: flex;
     flex-direction: row;
-   text-align: center;
+    text-align: center;
     align-items: center;
     background-color: lightgray; 
     justify-content: center;
- gap: 1rem;
+    gap: 1rem;
+
+
 }
 
 .explorer {
@@ -55,7 +59,6 @@ h2 {
     font-size: medium;
     width: 16rem;
     height: 3.5rem;
-   
     display: flex;
     justify-content: center;
     margin-top: 3rem;
@@ -64,10 +67,12 @@ h2 {
     background: #FF79DA ;
     color: #ffffff;
     border-radius: 30px;
-    border-color: white;
-    box-shadow: 4px 4px 8px 2px rgba(0,0,0,0.1);
+    border-color: #FF79DA ;
+    box-shadow: 2px 2px 1px 1px#928888;
 }
+
 .bigBtn {
+  
     font-size: small;
     font-weight: normal;
     align-items: center;
@@ -78,7 +83,7 @@ h2 {
     margin-bottom: 2rem;
     padding: 10px 30px;
     background: #f1f1f0;
-    color: #000000;
+    color: #0a0a0a;
     border-radius: 25px;
     box-shadow: 4px 4px 8px 2px rgba(0,0,0,0.1);
     
@@ -87,7 +92,9 @@ h2 {
     background: #fae7f5;
     color: #050505;
     }          
-
+.titres {
+    color: #000000;
+}
 .choix {
     margin-top: 3rem;
    background-color: white;
@@ -147,7 +154,7 @@ margin-left: -55px;
     margin-left: 1.6rem;
     width: 20rem;
     border-radius: 20px 20px 0px 0px;
-    box-shadow: 2px 2px 10px 0px rgba(252, 188, 188, 0.5);
+    box-shadow: 2px 2px 10px 0px rgba(0,0,0,0.5);
 }
 
 .card__description {
@@ -196,10 +203,41 @@ line-height: 0px;
     background-color: #363535;
     color: white;
 }
-
+.gap1 {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+}
 .contact {
   
     text-decoration: none;
     color: white;
 
+}
+
+/*Page la palette du gout*/
+
+.banniere {
+    width: 100%;
+    height: 16rem;
+    
+}
+.resto__title {
+    margin-top: -10%;
+    background-color: rgb(238, 237, 237);
+   border-radius: 40px 40px 0 0;
+}
+h4 {
+    font-size: large;
+    font-weight: bold;
+}
+.bigBtn {
+    background-color: white;
+    width: 80%;
+    margin-left: 0.5rem;
+    height: 4rem;
+}
+.menu {
+    background-color: rgb(238, 237, 237);
 }
