--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
     margin: 0;
 }
 h2 {
-    font-family: 'roboto', Shrikhand;
+    font-family: 'roboto', 'Shrikhand';
     
 }
 .grosTitre {
@@ -130,8 +130,16 @@ margin-left: -55px;
 .titreResto {
     margin-left: -11rem;
 }
+
+.menus__cards {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    align-items: center;
+
+}
 .card {
-    width: 40%;
+    width: 80%;
    
     border-radius: 0px 0px 20px 20px; 
    
@@ -140,37 +148,37 @@ margin-left: -55px;
 .card > a {
     width: 100%;
     height: 100%;
-    display: block;
+    display: flex;
     text-decoration: none;
-    
-  
+    flex-direction: column;
+}
 
+.card__image {
+    height: 75%;
+    width: auto;
 }
 
 .card__image > img {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-left: 1.6rem;
-    width: 20rem;
+    width: 100%;
     border-radius: 20px 20px 0px 0px;
     box-shadow: 2px 2px 10px 0px rgba(0,0,0,0.5);
 }
 
 .card__description {
-   
-    height: 30%;
     display: flex;
-    flex-direction: column;
-   width: 20rem;
-   margin-left: 1.6rem;
-margin-top: -5px;
-margin-bottom: 3rem;
+    flex-direction: row;
     border-radius: 0 0 20px 20px;
-    line-height: 0%;
+    vertical-align: middle;
+    width: auto;
+    margin: 0px;
     color: #000000;
     background-color: white;
     box-shadow: 2px 2px 10px 0px rgba(0,0,0,0.5);
+    justify-content: space-between;
+}
+
+.card__description .coeur {
+    width: 20%;
 }
 
 .coeur > .far
@@ -240,4 +248,8 @@ h4 {
 }
 .menu {
     background-color: rgb(238, 237, 237);
+}
+.button {
+    margin-left: 4rem;
+    margin-bottom: 5rem;
 }
