--- a/style.css
+++ b/style.css
@@ -39,28 +39,25 @@ h2 {
 .explorer {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content:center;
   align-items: center;
   padding-top: 2rem;
   padding-bottom: 3rem;
   background-color: #f1f1f0;
-  text-align: center;
 }
 .fonction {
   margin-left: -10rem;
   font-weight: bold;
 }
 .button {
+  display: flex;
   align-items: center;
+  justify-content: center;
   font-weight: bold;
   font-size: medium;
   width: 16rem;
   height: 3.5rem;
-  display: flex;
-  justify-content: center;
   margin-top: 3rem;
-  margin-bottom: 1rem;
-  padding: 10px 30px;
   background: #ff79da;
   color: #ffffff;
   border-radius: 30px;
@@ -70,13 +67,11 @@ h2 {
 
 .bigBtn {
   display: flex;
-  flex-direction: row;
+  flex-direction: row; 
+  align-items: center;
+  justify-content: space-around;
   font-size: small;
   font-weight: normal;
-  align-items: flex-start;
-  width: 70%;
-  -margin: 1.6rem;
-  justify-content: space-between;
   margin-bottom: 2rem;
   padding: 10px 30px;
   background: #f1f1f0;
@@ -92,13 +87,9 @@ h2 {
   color: #000000;
 }
 .choix {
-  margin-top: 3rem;
-  background-color: white;
-  width: 100%;
-  height: 20rem;
-  text-align: center;
-  font-weight: bold;
-  padding-bottom: 9rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 li {
   display: flex;
@@ -144,7 +135,43 @@ li {
 .card__image > img {
   width: 100%;
   border-radius: 20px 20px 0px 0px;
-  -box-shadow: 2px 2px 10px 0px rgba(0, 0, 0, 0.5);
+}
+.nouveau {
+  display: flex;
+  flex-direction: column;
+ justify-content: center;
+  position: relative;
+  width: 100px; 
+  height: 40px;
+  background: #99E2D0;
+  
+  
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 }
 .card__description {
   display: flex;
@@ -155,7 +182,6 @@ li {
   margin-top: -0.5rem;
   color: #000000;
   background-color: white;
-  -box-shadow: 2px 2px 10px 0px rgba(0, 0, 0, 0.5);
   line-height: 0px;
 }
 .card__description .coeur {
@@ -236,14 +262,7 @@ p {
   margin-top: 2.5rem;
   margin-left: 1rem;
 }
-.coeur2 {
-  margin-top: 2rem;
-  margin-left: 6rem;
-  color: #928888;
-}
-.coeur2:hover {
-  color: #ff79da;
-}
+
 
 h4 {
   font-size: 130%;
