--- a/style.css
+++ b/style.css
@@ -10,10 +10,10 @@ body {
   display: flex;
   flex-direction: column;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  text-align: center;
   background-color: white;
   margin: 0;
 }
+
 h2 {
   font-family: "Shrikhand";
 }
@@ -23,10 +23,12 @@ h2 {
   max-height: 50%;
 }
 .header {
+  display: flex;
+  justify-content: center;
   height: 4rem;
 }
 .ville {
-  font-size: small;
+  font-size: xx-small;
   display: flex;
   flex-direction: row;
   text-align: center;
@@ -34,28 +36,29 @@ h2 {
   background-color: lightgray;
   justify-content: center;
   gap: 1rem;
+  box-shadow: inset 0px 1px 6px #8d8c8c96;
+  
 }
 
 .explorer {
   display: flex;
   flex-direction: column;
   justify-content:center;
+  align-content: center;
   align-items: center;
   padding-top: 2rem;
   padding-bottom: 3rem;
   background-color: #f1f1f0;
+  text-align: center;
 }
 .fonction {
   margin-left: -10rem;
   font-weight: bold;
 }
 .button {
-  display: flex;
-  align-items: center;
-  justify-content: center;
   font-weight: bold;
   font-size: medium;
-  width: 16rem;
+  width: 14rem;
   height: 3.5rem;
   margin-top: 3rem;
   background: #ff79da;
@@ -66,10 +69,12 @@ h2 {
 }
 
 .bigBtn {
+  width: 17rem;
+  position: relative;
   display: flex;
   flex-direction: row; 
   align-items: center;
-  justify-content: space-around;
+  justify-content: space-between;
   font-size: small;
   font-weight: normal;
   margin-bottom: 2rem;
@@ -96,7 +101,8 @@ li {
   align-items: row;
   justify-content: center;
   align-items: center;
-  margin-left: -55px;
+  position: absolute;
+  left: -15px;
   width: 25px;
   height: 25px;
   background: #9356dc;
@@ -106,8 +112,16 @@ li {
   -o-border-radius: 100px;
   border-radius: 100px;
 }
+.bigBtn .fas {
 
+  color: #6d6c6c;
+}
 .restaurants {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
   padding-top: 15%;
   background-color: #f1f1f0;
   padding-bottom: 3rem;
@@ -126,58 +140,46 @@ li {
   width: 80%;
   border-radius: 0px 0px 20px 20px;
   box-shadow: 2px 2px 10px 0px rgba(0, 0, 0, 0.5);
-
+position: relative;
 }
 .card > a {
   text-decoration: none;
-}
-
-.card__image > img {
-  width: 100%;
-  border-radius: 20px 20px 0px 0px;
-}
-.nouveau {
   display: flex;
   flex-direction: column;
- justify-content: center;
-  position: relative;
+}
+
+.card__image
+ {
+   height: 75%;
+    width: 100%;
+
+ }
+
+.card__image > img {
+  width: inherit;
+  border-radius: 20px 20px 0px 0px;
+}
+.nouveau { 
+  position: absolute;
+  display: flex;
+  justify-content: space-around;
   width: 100px; 
-  height: 40px;
+  height: 30px;
+  top: 1.3rem;
+  right: 15px;
+  font-weight: 500;
+  border-radius: 4px;
+  color: #478a79;
   background: #99E2D0;
-  
-  
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+  box-shadow: 4px 4px 8px 2px rgba(0, 0, 0, 0.1);
 
 }
 .card__description {
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  height: 5rem;
+  height: 25%;
   border-radius: 0 0 20px 20px;
   margin-top: -0.5rem;
   color: #000000;
@@ -205,15 +207,12 @@ p {
   margin-left: 0px;
 }
 .img2 {
-  width: 90%;
-  height: 16rem;
-  border-radius: 20px 20px 0 0;
+  -position: relative;
+ width: auto;
+  height: 200px;
+ 
 }
-.ligne {
- width: 5rem;
-  background-color: #99e2d0;
 
-}
 h4 {
   font-size: smaller;
   margin-bottom: 0rem;
@@ -250,33 +249,52 @@ p {
   width: 100%;
   height: 16rem;
 }
-.resto__title {
-  display: flex;
-  flex-direction: row;
-  align-items: space-between;
-  margin-top: -10%;
-  background-color: rgb(238, 237, 237);
-  border-radius: 40px 40px 0 0;
-}
+
 .palette {
+  font-weight: 900;
+  font-size: x-large;
   margin-top: 2.5rem;
   margin-left: 1rem;
 }
+.coeur2 .fas {
+ display: none;
+}
 
+.coeur2:hover .fas {
+  display: block; 
+  color: #ff79da;
+}
+.coeur2:hover .far {
+ display: none;
+}
 
 h4 {
   font-size: 130%;
   font-weight: bold;
   margin-top: 0.5rem;
 }
-.bigBtn {
+.bigBtn2 {
+  display: flex;
+  flex-direction: row; 
+  font-size: small;
+  font-weight: normal;
+  margin-bottom: 2rem;
+  padding: 10px 30px;
+  background: #f1f1f0;
+  color: #0a0a0a;
+  border-radius: 25px;
+  box-shadow: 4px 4px 8px 2px rgba(0, 0, 0, 0.1);
+  justify-content: space-between;
+  align-items: flex-start;
   background-color: white;
   width: 80%;
-  margin-left: 0.5rem;
   height: 4rem;
 }
 .menu {
   background-color: rgb(238, 237, 237);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 .menu-item__description {
   display: flex;
@@ -285,7 +303,48 @@ h4 {
   justify-content: flex-start;
   height: 1rem;
 }
-.button {
-  margin-left: 4rem;
-  margin-bottom: 5rem;
+.menu__category1 .menu__category2 .menu__category3 {
+  flex: none;
+  padding-left: 1rem;
+  margin-left: 1rem;
+  -display: flex;
+  -flex-direction: row;
+  -justify-content: flex-start;
+  -align-items: flex-start;
+  -align-content: flex-start;
+ 
 }
+.menu-item__prix {
+  display: block;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  font-weight: bold;
+}
+.ligne {
+  margin-left: 3%;
+  width: 2rem;
+  height: 5px;
+  border-width:0;
+   background-color: #99E2D0;
+ color: #99E2D0;
+ }
+.button2 {
+  font-weight: bold;
+  font-size: medium;
+  width: 14rem;
+  height: 3.5rem;
+  margin-top: 3rem;
+  background: #ff79da;
+  color: #ffffff;
+  border-radius: 30px;
+  border-color: #ff79da;
+  box-shadow: 2px 2px 1px 1px#928888;
+  margin-left: 20%;
+  margin-bottom: 8%;
+  margin-top: 5%;
+}
+.resto-main {
+  background-color:  rgb(238, 237, 237);
+}
+
