--- a/style.css
+++ b/style.css
@@ -96,7 +96,7 @@ h2 {
   flex-direction: column;
   align-items: center;
 }
-li {
+.li {
   display: flex;
   align-items: row;
   justify-content: center;
