--- a/style.css
+++ b/style.css
@@ -138,7 +138,7 @@ h2 {
 }
 .card {
   width: 80%;
-  border-radius: 0px 0px 20px 20px;
+  border-radius: 20px 20px 20px 20px;
   box-shadow: 2px 2px 10px 0px rgba(0, 0, 0, 0.5);
 position: relative;
 }
@@ -152,7 +152,7 @@ position: relative;
  {
    height: 75%;
     width: 100%;
-
+   
  }
 
 .card__image > img {
@@ -178,7 +178,9 @@ position: relative;
   width: 100%;
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  -align-items: flex-start;
+  justify-content: space-around;
+ text-align: 1rem;
   height: 25%;
   border-radius: 0 0 20px 20px;
   margin-top: -0.5rem;
@@ -204,12 +206,11 @@ position: relative;
 
 h3,
 p {
-  margin-left: 0px;
+  margin-left: 15px;
 }
 .img2 {
-  -position: relative;
  width: auto;
-  height: 200px;
+  height: 280px;
  
 }
 
@@ -223,21 +224,22 @@ p {
 .footer {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
-  margin-bottom: -1rem;
+  -align-items: flex-start;
+  justify-content: space-between;
+  -margin-bottom: -1rem;
   padding-bottom: 2em;
   padding-top: 1rem;
   padding-left: 2rem;
-  line-height: 0px;
+  -line-height: 0px;
   background-color: #363535;
   color: white;
 }
-.gap1 {
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-start;
-  align-items: center;
+.gap {
+  display: block;
+  justify-content: space-between;
+ 
 }
+
 .contact {
   text-decoration: none;
   color: white;
@@ -255,6 +257,11 @@ p {
   font-size: x-large;
   margin-top: 2.5rem;
   margin-left: 1rem;
+}
+.resto__title {
+  background-color: rgb(238, 237, 237);
+ margin-top: -4rem;
+ border-radius: 50px 50px 0 0;
 }
 .coeur2 .fas {
  display: none;
@@ -304,15 +311,12 @@ h4 {
   height: 1rem;
 }
 .menu__category1 .menu__category2 .menu__category3 {
-  flex: none;
+  -flex: none;
+  display: flex;
+ justify-self: unset;
+  -text-align: unset;
   padding-left: 1rem;
   margin-left: 1rem;
-  -display: flex;
-  -flex-direction: row;
-  -justify-content: flex-start;
-  -align-items: flex-start;
-  -align-content: flex-start;
- 
 }
 .menu-item__prix {
   display: block;
