--- a/style.css
+++ b/style.css
@@ -55,19 +55,20 @@ h2 {
   margin-left: -10rem;
   font-weight: bold;
 }
-.button {
-  font-weight: bold;
+
+.button { 
+  font-weight: 500;
   font-size: medium;
-  width: 14rem;
+  border-radius: 40px;
+  border-color: transparent;
+  width: 15rem;
   height: 3.5rem;
   margin-top: 3rem;
-  background: #ff79da;
   color: #ffffff;
-  border-radius: 30px;
-  border-color: #ff79da;
-  box-shadow: 2px 2px 1px 1px#928888;
-}
+  background-image:linear-gradient(60deg,#FF79DA, #9356DC);
+  box-shadow: 1px 1px 10px 1px#928888;
 
+}
 .bigBtn {
   width: 17rem;
   position: relative;
@@ -140,19 +141,16 @@ h2 {
   width: 80%;
   border-radius: 20px 20px 20px 20px;
   box-shadow: 2px 2px 10px 0px rgba(0, 0, 0, 0.5);
-position: relative;
+  position: relative;
 }
 .card > a {
   text-decoration: none;
   display: flex;
   flex-direction: column;
 }
-
 .card__image
  {
-   height: 75%;
     width: 100%;
-   
  }
 
 .card__image > img {
@@ -178,7 +176,6 @@ position: relative;
   width: 100%;
   display: flex;
   flex-direction: column;
-  -align-items: flex-start;
   justify-content: space-around;
  text-align: 1rem;
   height: 25%;
@@ -189,9 +186,20 @@ position: relative;
   line-height: 0px;
 }
 .card__description .coeur {
+
   margin-left: 15rem;
 }
-
+-coeur {
+display: flex;
+flex-direction: wrap;
+justify-self: center;
+align-items: center;
+align-self: center;
+}
+.coeur {
+margin-top:-20px;
+padding-bottom: 20px;
+}
 .coeur .fas {
     display: none;
 }
@@ -210,7 +218,7 @@ p {
 }
 .img2 {
  width: auto;
-  height: 280px;
+ height: 280px;
  
 }
 
@@ -224,25 +232,31 @@ p {
 .footer {
   display: flex;
   flex-direction: column;
-  -align-items: flex-start;
   justify-content: space-between;
-  -margin-bottom: -1rem;
+  align-self: space-between;
   padding-bottom: 2em;
   padding-top: 1rem;
   padding-left: 2rem;
-  -line-height: 0px;
   background-color: #363535;
   color: white;
 }
 .gap {
   display: block;
   justify-content: space-between;
- 
 }
-
+.gap1 {display: inline;
+  
+}
 .contact {
   text-decoration: none;
   color: white;
+}
+.icone {
+  display: inline-flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
 }
 
 /*Page la palette du gout*/
@@ -256,9 +270,13 @@ p {
   font-weight: 900;
   font-size: x-large;
   margin-top: 2.5rem;
-  margin-left: 1rem;
+  margin-left: -0.5rem;
 }
 .resto__title {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  align-content: center;
   background-color: rgb(238, 237, 237);
  margin-top: -4rem;
  border-radius: 50px 50px 0 0;
@@ -325,28 +343,36 @@ h4 {
   align-content: center;
   font-weight: bold;
 }
+.menu-item__prix:hover {
+ background-color: #99E2D0;
+ -moz-transform: scale(0.7) translateX(-100px) translateY(0px);
+ -webkit-transform: scale(0.7) translateX(-100px) translateY(0px);
+ -o-transform: scale(0.7) translateX(-100px) translateY(0px);
+ -ms-transform: scale(0.7) translateX(-100px) translateY(0px);
+ transform: scale(0.7) translateX(-100px) translateY(0px);
+}
 .ligne {
   margin-left: 3%;
   width: 2rem;
   height: 5px;
   border-width:0;
-   background-color: #99E2D0;
- color: #99E2D0;
+  background-color: #99E2D0;
+  color: #99E2D0;
  }
 .button2 {
-  font-weight: bold;
-  font-size: medium;
-  width: 14rem;
-  height: 3.5rem;
-  margin-top: 3rem;
-  background: #ff79da;
-  color: #ffffff;
-  border-radius: 30px;
-  border-color: #ff79da;
-  box-shadow: 2px 2px 1px 1px#928888;
   margin-left: 20%;
   margin-bottom: 8%;
   margin-top: 5%;
+  font-weight: 500;
+  font-size: medium;
+  border-radius: 40px;
+  border-color: transparent;
+  width: 15rem;
+  height: 3.5rem;
+  margin-top: 3rem;
+  color: #ffffff;
+  background-image:linear-gradient(60deg,#FF79DA, #9356DC);
+  box-shadow: 1px 1px 10px 1px#928888;
 }
 .resto-main {
   background-color:  rgb(238, 237, 237);
